<resources>
    <string name="app_name">Practice6Kotlin</string>
    <string name="tea">Tea</string>
    <string name="coffea">Coffea</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="lemon">Lemon</string>
    <string-array name="array_of_drinks_tea">
        <item>Green</item>
        <item>Dark</item>
    </string-array>
    <string-array name="array_of_drinks_cofee">
        <item>Capuccino</item>
        <item>Latte</item>
        <item>Mokko</item>
    </string-array>
</resources>