<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <TextView
        android:layout_marginTop="16dp"
        android:textSize="26sp"
        android:id="@+id/textViewgreaatings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewgreaatings"
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:onClick="onCklickChangeDrink"
            android:textSize="26sp"
            android:layout_weight="1"
            android:id="@+id/radiobuttonTea"
            android:text="@string/tea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:onClick="onCklickChangeDrink"
            android:textSize="26sp"
            android:layout_weight="1"
            android:id="@+id/radiobuttonCofee"
            android:text="@string/coffea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <TextView
        android:textSize="26sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        android:id="@+id/TextviewWhatAddtoTea"
        android:text="What add to dink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:text="@string/sugar"
        app:layout_constraintTop_toBottomOf="@+id/TextviewWhatAddtoTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkboxmilk"
        android:id="@+id/checkboxsugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:text="@string/milk"
        app:layout_constraintTop_toBottomOf="@+id/TextviewWhatAddtoTea"
        app:layout_constraintStart_toEndOf="@+id/checkboxsugar"
        app:layout_constraintEnd_toStartOf="@+id/checkboxlemon"
        android:id="@+id/checkboxmilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:text="@string/lemon"
        app:layout_constraintTop_toBottomOf="@+id/TextviewWhatAddtoTea"
        app:layout_constraintStart_toEndOf="@+id/checkboxmilk"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/checkboxlemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="26sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/checkboxmilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Choose type of drink"
        android:id="@+id/viberitevidNapitka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:visibility="visible"
        android:entries="@array/array_of_drinks_tea"
        app:layout_constraintTop_toBottomOf="@+id/viberitevidNapitka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/spinnerOfDrink_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>
    <Spinner
        android:visibility="invisible"
        android:entries="@array/array_of_drinks_cofee"
        app:layout_constraintTop_toBottomOf="@+id/viberitevidNapitka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/spinnerOfDrink_cofee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>
    <Button
        android:onClick="onCklickMakeOrder"
        android:text="Make order"
        android:textSize="26sp"
        android:id="@+id/makeOrderbutton"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOfDrink_tea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>